k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rentalgateway
    version: "1.0"
  name: rentalgateway-v1
  namespace: rentalsystem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rentalgateway
      version: "1.0"
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: rentalgateway
        version: "1.0"
    spec:
      containers:
      - env:
        - name: ASPNETCORE_ENVIRONMENT
          value: Production
        image: edsdck/rental-system-gateway:1.0
        imagePullPolicy: Always
        name: rentalgateway
        ports:
        - containerPort: 4200
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: rentalgateway
  name: rentalgateway
  namespace: rentalsystem
spec:
  type: ClusterIP
  ports:
  - name: "http-4200"
    port: 4200
    targetPort: 4200
  selector:
    app: rentalgateway
