k8s/identity-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: identityapi
    version: "1.0"
  name: identityapi-v1
  namespace: rentalsystem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identityapi
      version: "1.0"
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: identityapi
        version: "1.0"
    spec:
      containers:
      - env:
        - name: ASPNETCORE_ENVIRONMENT
          value: Production
        image: edsdck/rental-system-identity:1.0
        imagePullPolicy: Always
        name: identityapi
        ports:
        - containerPort: 5555
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: identityapi
  name: identityapi
  namespace: rentalsystem
spec:
  type: ClusterIP
  ports:
  - name: "http-5555"
    port: 5555
    targetPort: 5555
  selector:
    app: identityapi
