k8s/mvc-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mvcclient
    version: "1.0"
  name: mvcclient-v1
  namespace: rentalsystem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mvcclient
      version: "1.0"
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: mvcclient
        version: "1.0"
    spec:
      containers:
      - env:
        - name: ASPNETCORE_ENVIRONMENT
          value: Production
        image: edsdck/rental-system-mvc:1.0
        imagePullPolicy: Always
        name: mvcclient
        ports:
        - containerPort: 5554
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: mvcclient
  name: mvcclient
  namespace: rentalsystem
spec:
  type: ClusterIP
  ports:
  - name: "http-5554"
    port: 5554
    targetPort: 5554
  selector:
    app: mvcclient
