k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: rentalsystem
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: rentalgateway
                port:
                  number: 4200
          - path: /mvc
            pathType: Prefix
            backend:
              service:
                name: mvcclient
                port:
                  number: 5554
          - path: /identity
            pathType: Prefix
            backend:
              service:
                name: identityapi
                port:
                  number: 5555
